fix for fancy scrollbars: style scrollbar-corner
style scrollbar-corner in the treeview if
scrollbars both horizontal & vertical are visible

--- a/doxygen-awesome.css
+++ b/doxygen-awesome.css
@@ -1905,6 +1905,10 @@ div.memproto::-webkit-scrollbar-track,
     background: transparent;
 }
 
+#nav-tree::-webkit-scrollbar-corner {
+    background-color: var(--side-nav-background);
+}
+
 #nav-tree,
 div.fragment,
 pre.fragment,
